--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@capacitor/core": "1.2.1",
-    "@ionic-native/core": "^5.0.0",
+    "@ionic-native/core": "^5.15.0",
+    "@ionic-native/geolocation": "^5.15.0",
+    "@ionic-native/google-maps": "^5.5.0",
     "@ionic-native/http": "^5.14.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -31,6 +33,8 @@
     "cordova-browser": "^6.0.0",
     "cordova-plugin-advanced-http": "^2.1.1",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-googlemaps": "^2.6.2",
     "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
@@ -81,7 +85,9 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-googlemaps": {},
+      "cordova-plugin-geolocation": {}
     },
     "platforms": [
       "browser",
