--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.1.0",
-    "cordova-browser": "^6.0.0",
-    "cordova-plugin-advanced-http": "^2.1.1",
+    "cordova-browser": "6.0.0",
+    "cordova-plugin-advanced-http": "^2.2.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-googlemaps": "^2.6.2",
