--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "~8.1.2",
     "@capacitor/core": "1.2.1",
     "@ionic-native/core": "^5.15.0",
-    "@ionic-native/geolocation": "^5.15.0",
+    "@ionic-native/geolocation": "^5.15.1",
     "@ionic-native/google-maps": "^5.5.0",
     "@ionic-native/http": "^5.14.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -37,6 +37,7 @@
     "cordova-plugin-googlemaps": "^2.6.2",
     "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
+    "ionic4-rating": "^1.0.9",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
