--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cordova-plugin-googlemaps": "^2.6.2",
     "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
+    "google-libphonenumber": "^3.2.6",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
