--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@capacitor/core": "1.2.1",
+    "@ionic-native/camera": "^5.16.0",
     "@ionic-native/core": "^5.15.0",
     "@ionic-native/geolocation": "^5.15.1",
     "@ionic-native/google-maps": "^5.5.0",
@@ -29,9 +30,13 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
+    "aws-sdk": "^2.573.0",
+    "com.subitolabs.android.cordova.galleryapi": "git+https://github.com/Collaborne/cordova-gallery-api.git",
     "cordova-android": "8.1.0",
     "cordova-browser": "6.0.0",
+    "cordova-gallery-access": "^3.0.3",
     "cordova-plugin-advanced-http": "^2.2.0",
+    "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-googlemaps": "^2.6.2",
@@ -57,7 +62,7 @@
     "@ionic/lab": "2.0.11",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "^5.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -89,7 +94,9 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-sqlite-storage": {},
       "cordova-plugin-googlemaps": {},
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {},
+      "com.subitolabs.android.cordova.galleryapi": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "browser",
